# VEDA_Linux_Project

./: CMakeLists.txt  README.md  README.txt  REPORT.md  build.sh  client  raspberrypi4_toolchain.cmake
config/: client_config.ini  server_config.ini
include/: common.h  config.h  device_interface.h
src/client/: client_main.c  terminal_ui.c
src/devices/: buzzer.c  cds.c  led.c  segment.c
src/server/: config.c  device_manager.c  main.c  network_server.c
src/server/handlers/: buzzer_handler.c  cds_handler.c  led_handler.c  segment_handler.c
